# pkgconfig

./: CMakeLists.txt  Makefile.am  Makefile.in  README.pkg-config-lite  configure  configure.ac  glib-snippet.c  glib-snippet.h  main.c  pkg.h  requirements.txt
check/: Makefile.in
